name:                alice-bob
version:             0.1.0.0
synopsis:            Minimalist esolang based on Brain-Flak
description:         Replaces the left stack and right stack by Alice's stack that behaves as usual and Bob's queue which interprets booleans differently
homepage:            https://github.com/bforte/alice-bob#README.md
license:             BSD3
license-file:        LICENSE
author:              BMO
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable alice-bob
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports -Wunused-matches -Wincomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , parsec
